<resources>
    <string name="app_name">RefactoringLifeAcademy</string>
    <string name="register">Registrarse</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="show_password">Mostrar contraseña</string>
    <string name="enter">Entrar</string>
    <string name="register_here">registrate aqui</string>
    <string name="login_here">inicia sesion aqui</string>
    <string name="no_account">Si no tienes una cuenta,</string>
    <string name="si_account">Si tienes una cuenta creada,</string>
    <!--PreLogin-->
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="logotipo_de_la_academia">Logotipo de la academia</string>
    <string name="refactoring_life_academy">Refactoring Life\n Academy</string>
    <string name="en_caso_de_tener_problemas_comunicarse_con_soporte">En caso de tener problemas comunicarse con soporte</string>
    <!--finPreLogin-->
    <string name="sign_in">Iniciar sesión</string>
    <string name="user_or_password_error">Error en el usuario o contraseña!</string>
    <string name="error_user_password">Error en el usuario o contraseña!</string>
    <!--API-->
    <string name="base_url">https://api-users-c9xg.onrender.com/</string>
    <!--home-->
    <string name="content_description">Imagen de descripcion</string>
    <string name="search">Busca en Refactoring Life Shop</string>
    <string name="product">Short Verano</string>
    <string name="price">$ 12.000</string>
    <string name="problems">En caso de problemas comunicate con </string>
    <string name="support">soporte</string>
    <string name="offer">Oferta del día</string>
    <string name="last_visited">Ultimo visitado</string>
    <string name="rusty">Rusty</string>
    <string name="rusty_description">Buzo canguro capucha con cordon</string>
    <!-- Register-->
    <string name="msj_error">Error en el mail o la contraseña</string>
    <!-- Detail-->
    <string name="but_images">Imagenes</string>
    <string name="but_descrip">Descripcion</string>
    <string name="but_financ">Financiacion</string>
    <string name="but_coment">Comentarios</string>
    <string name="desc_arrowleft">Flecha Regreso Home</string>
    <string name="desc_semicircle">Semicirculo Leftbar</string>
    <string name="comprar">Comprar</string>
    <!-- Texto Prueba Fragments -->
    <string name="image_fragment">Buzo Rusty</string>
    <string name="descr_fragment">Hello description fragment</string>
    <string name="commment_fragment">Hello comment fragment</string>
    <string name="fiance_fragment">Hello finence fragment</string>
    <string name="image_finance_fragment">Image Banco Financiacion</string>
    <string name="cuotas"> cuotas: </string>
    <!--buy-->
    <string name="image_check">Imagen de Comprar</string>
    <string name="texto_buy1">El vendedor se comunicara</string>
    <string name="texto_buy2">con vos en breve</string>

    <string name="buy">Comprar</string>
    <string name="lorem_ipsum">¿Qué es Lorem Ipsum?
Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
    ¿Por qué lo usamos?
Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. Muchas versiones han evolucionado a través de los años, algunas veces por accidente, otras veces a propósito (por ejemplo insertándole humor y cosas por el estilo).</string>
    <string name="products">Productos</string>


    <!--image-->
    <string name="colors">Colores</string>
    <string name="similar">Similares</string>
    <string name="image_error">image_error</string>
    <string name="image_warning_error">image_warning_error</string>
    <string name="description_image_error">Hay un problema con \nla carga de imagenes</string>

    <string name="comment_text">an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially </string>

    <!--similar-->
    <string name="vendedor">Vendedor:</string>
    <string name="see">Ver</string>
    <string name="not_fount">Perdon no pudimos encontrar el contenido</string>

</resources>
