<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="80dp"
    android:layout_height="120dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/ivProduct"
            android:contentDescription="@string/content_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="center"
            tools:src="@drawable/pants" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/producName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="@string/product"
        android:textSize="11sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/producPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="@string/price"
        android:textSize="11sp"
        android:textStyle="bold" />


</LinearLayout>