<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="152dp"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp"
    android:background="@drawable/rounded_background"
    android:backgroundTint="@color/white"
    android:elevation="10dp"
    android:padding="20dp">

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/content_description"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/pants" />

    <ImageView
        android:id="@+id/ivHeart"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/heart_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/ivHeart"
        app:layout_constraintStart_toEndOf="@id/ivProduct"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/rusty" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rusty_description"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivProduct"
        app:layout_constraintTop_toBottomOf="@id/tvProductName" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ivProduct"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/price" />



</androidx.constraintlayout.widget.ConstraintLayout>