<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/csl_img_error"
    android:layout_width="250dp"
    android:layout_height="290dp"
    android:background="@drawable/rounded_background"
    android:elevation="12dp"
    android:padding="20dp"
    android:layout_margin="15dp">

    <ImageView
        android:id="@+id/iv_img_error"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginVertical="9dp"
        android:background="@drawable/img_error"
        android:contentDescription="@string/image_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/iv_warning"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/image_warning_error"
        android:src="@drawable/warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:text="@string/description_image_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_img_error" />


</androidx.constraintlayout.widget.ConstraintLayout>