<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/similar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context=".ui.similar.presenter.SimilarActivity"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_similar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_background2"
        android:elevation="15dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_similar"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/content_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerInside"
            tools:src="@drawable/pants" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivHeartBlue"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/rusty" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivHeartBlue"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="@string/rusty_description"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="65dp"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_see"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="@string/price"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/ivHeartBlue"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/heart_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_see"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/button_background"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="42dp"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:text="@string/see"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <include
            android:id="@+id/progress_tv"
            layout="@layout/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>